# src/routes/profile.ts
@@ -1,10 +1,10 @@
-import Router from 'koa-router';
-import { getProfile } from '../controllers/profile';
-import { auth } from '../middleware/auth';
+import Router from 'koa-router'
+import { getProfile } from '../controllers/profile'
+import { auth } from '../middleware/auth'
 
-const router = new Router({ prefix: '/profile' });
+const router = new Router({ prefix: '/profile' })
 
 // GET /api/profile
-router.get('/', auth(), getProfile);
+router.get('/', auth(), getProfile)
 
-export default router;
+export default router
